
2009-04-07  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: RH5 support

2008-12-05  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: got rid of RPM2 (broken with modern RPM versions)
	* check_updates: using Nagios::Plugin::Getopt for the processing of command line options
	* check_updates: timeout

2008-11-14  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: fixed a bug with updates and excluded packages (wrong count)

2008-08-06  root  <matteo.corti@id.ethz.ch>

	* check_updates: workaround for a possible bug in Sort::Versions
	                 (http://rt.cpan.org/Public/Bug/Display.html?id=34622)

2008-06-03  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: separated the POD documentation because of ePN issues
	* check_updates: added the -[no]-boot-check option to disable the kernel check
	* check_updates: corrected a bug occurring when yum debug level is 0

2008-05-15  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: uname returns the kernel version with the architecture at the end

2008-05-08  root  <matteo.corti@id.ethz.ch>

	* check_updates: Correct kernel versions sorting

2008-03-17  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: CentOS uses yum but had smp and non smp kernels

2008-03-07  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: fixed a problem in the notification of a needed reboot

2008-02-26  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: fixed a problem while counting the number of obsolete
			 packages

2008-02-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: fixed the kernel check on RH systems

2008-02-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: checks if the running kernel is the latest
                         installed
	* check_updates: removed backticks (using open -|)

2008-01-22  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: recognizes CentOS
