@@ -1,6 +1,15 @@
 # Load the Module::Install bundled in ./inc/
 use inc::Module::Install;
 
+################################################################################
+# Version information:
+#
+# $Id$
+# $Revision$
+# $HeadURL$
+# $Date$
+#
+
 ##############################################################################
 # Define metadata (we read it from the binary)
 
