@@ -26,3 +26,7 @@ Use one of the following commands to install the yum security plugin:
   Red Hat / CentOS 5.x systems:
   * yum install yum-security   
 
+# $Id$
+# $Revision$
+# $HeadURL$
+# $Date$
