@@ -1,3 +1,9 @@
+
 * Should check for up2date errors (return code?)
 
 * Check for updates on Mac OS X / fink systems
+
+# $Id$
+# $Revision$
+# $HeadURL$
+# $Date$
